--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
   <footer>
-    <p>© 2025 Seu Nome. Todos os direitos reservados.</p>
+    <p>© 2025 Bruna Thomaz. Todos os direitos reservados.</p>
   </footer>
 
   <script src="script.js"></script>
